fix: update alignment and responsive design

--- a/src/output.css
+++ b/src/output.css
@@ -591,6 +591,10 @@ video {
   margin-right: auto;
 }
 
+.mb-0 {
+  margin-bottom: 0px;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -635,8 +639,12 @@ video {
   margin-bottom: 2rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .mr-2 {
@@ -645,14 +653,6 @@ video {
 
 .mr-4 {
   margin-right: 1rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.ml-8 {
-  margin-left: 2rem;
 }
 
 .block {
@@ -759,12 +759,12 @@ video {
   width: 24rem;
 }
 
-.w-\[50\%\] {
-  width: 50%;
-}
-
 .w-\[90\%\] {
   width: 90%;
+}
+
+.w-\[95\%\] {
+  width: 95%;
 }
 
 .w-auto {
@@ -775,8 +775,8 @@ video {
   width: 100%;
 }
 
-.w-\[95\%\] {
-  width: 95%;
+.w-\[75\%\] {
+  width: 75%;
 }
 
 .border-collapse {
@@ -791,12 +791,12 @@ video {
   resize: both;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -809,6 +809,22 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.place-content-center {
+  place-content: center;
+}
+
+.place-items-start {
+  place-items: start;
+}
+
+.place-items-center {
+  place-items: center;
+}
+
+.content-center {
+  align-content: center;
 }
 
 .items-start {
@@ -837,6 +853,14 @@ video {
 
 .justify-evenly {
   justify-content: space-evenly;
+}
+
+.justify-items-end {
+  justify-items: end;
+}
+
+.justify-items-center {
+  justify-items: center;
 }
 
 .gap-1 {
@@ -871,6 +895,10 @@ video {
   gap: 2rem;
 }
 
+.gap-0 {
+  gap: 0px;
+}
+
 .place-self-center {
   place-self: center;
 }
@@ -885,6 +913,10 @@ video {
 
 .justify-self-auto {
   justify-self: auto;
+}
+
+.justify-self-center {
+  justify-self: center;
 }
 
 .rounded {
@@ -1123,6 +1155,10 @@ video {
   line-height: 1;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1141,6 +1177,14 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-\[14px\] {
+  font-size: 14px;
+}
+
+.text-\[15px\] {
+  font-size: 15px;
 }
 
 .font-bold {
@@ -1321,6 +1365,10 @@ html {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .sm\:place-items-start {
+    place-items: start;
+  }
+
   .sm\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -1341,20 +1389,28 @@ html {
     width: 80%;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:w-\[90\%\] {
     width: 90%;
   }
 
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:w-\[85\%\] {
+    width: 85%;
+  }
+
+  .md\:w-\[95\%\] {
+    width: 95%;
   }
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:place-items-start {
+    place-items: start;
   }
 
   .md\:gap-4 {
@@ -1364,6 +1420,10 @@ html {
   .md\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .md\:text-left {
+    text-align: left;
   }
 
   .md\:text-6xl {
@@ -1378,12 +1438,12 @@ html {
 }
 
 @media (min-width: 1024px) {
-  .lg\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:grid {
+    display: grid;
   }
 
   .lg\:hidden {
@@ -1394,16 +1454,12 @@ html {
     width: 45%;
   }
 
-  .lg\:w-\[50\%\] {
-    width: 50%;
-  }
-
   .lg\:w-\[80\%\] {
     width: 80%;
   }
 
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .lg\:w-\[95\%\] {
+    width: 95%;
   }
 
   .lg\:flex-row {
@@ -1437,12 +1493,16 @@ html {
     margin-bottom: 0px;
   }
 
+  .xl\:w-\[50\%\] {
+    width: 50%;
+  }
+
   .xl\:w-\[98\%\] {
     width: 98%;
   }
 
-  .xl\:w-\[50\%\] {
-    width: 50%;
+  .xl\:justify-evenly {
+    justify-content: space-evenly;
   }
 
   .xl\:gap-12 {
@@ -1451,6 +1511,10 @@ html {
 
   .xl\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .xl\:text-left {
+    text-align: left;
   }
 
   .xl\:text-7xl {
